--- a/build.gradle
+++ b/build.gradle
@@ -18,11 +18,18 @@ ext {
     SLF4J = "org.slf4j:slf4j-api:1.7.7"
     JUNIT = "junit:junit:4.11"
     MOCKIT_TO = "org.mockito:mockito-all:1.10.19"
-    JACKSON = "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
+//    JACKSON = "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
+    JACKSON_CORE = "com.fasterxml.jackson.core:jackson-core:2.6.3"
+    JACKSON_DATABIND = "com.fasterxml.jackson.core:jackson-databind:2.6.3"
+    JACKSON_ANNOTATIONS = "com.fasterxml.jackson.core:jackson-annotations:2.6.3"
+
+    SERVLET_API = "javax.servlet:servlet-api:3.0-alpha-1"
+
+    COMMONS_FILEUPLOAD = "commons-fileupload:commons-fileupload:1.3.1"
 }
 
 dependencies {
-    compile SPRING_CORE, SPRING_WEBMVC, SPRING_CONTEXT, SLF4J, JACKSON
+    compile SPRING_CORE, SPRING_WEBMVC, SPRING_CONTEXT, SLF4J, JACKSON_CORE, JACKSON_ANNOTATIONS, JACKSON_DATABIND, SERVLET_API, COMMONS_FILEUPLOAD
     testCompile JUNIT, MOCKIT_TO
 }
 
